--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -7,6 +7,13 @@
         flex-direction: column;
     }
 
+    .urb_title h3,
+    h2,
+    h1,
+    p {
+        text-align: center !important;
+    }
+
     .urb_nav-right {
         width: calc(100% - 32px);
         display: flex;
@@ -17,12 +24,42 @@
 
     .urb_qs {
         flex-direction: column;
+        padding: 0 !important;
+        gap: 0 !important;
     }
 
- /*    .urb_qs-img {
+    .urb_qs-img {
         width: 100%;
-        height: 120px;
-    } */
+        height: 200px;
+        position: relative;
+    }
+
+    .urb_qs-logo {
+        width: 100px;
+        height: 100px;
+        position: absolute;
+        top: 25%;
+        left: 50%;
+        bottom: 0;
+        right: 0;
+        transform: translate(-50%, 0);
+        border-bottom-left-radius: 4px;
+        background: var(--color-primary);
+    }
+
+    .urb_qs-img span {
+        display: none;
+    }
+
+    .urb_qs-logo img {
+        width: 100px;
+    }
+
+    .urb_qs-content {
+        width: calc(100% - 48px);
+        padding: 48px 24px !important;
+        align-items: center;
+    }
 
     h3,
     h2 {
@@ -39,6 +76,12 @@
     section {
         gap: 24px !important;
         height: auto;
+        padding: 48px 24px !important;
+    }
+
+    .urb_home_content {
+        width: 100%;
+        gap: 24px;
     }
 
     .urb_nav-list {
@@ -50,30 +93,57 @@
     }
 
     .serv_card-front {
-        height: 500px;
+        height: 600px;
         background-color: white;
     }
 
     .serv_card-back {
-        height: 500px;
+        height: 600px;
+    }
+
+    .section_nst {
+        padding: 0 !important;
+    }
+
+    .nst_card-item {
+        width: calc(100% - 48px);
+    }
+
+    .nst_card-content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .exp_card {
+        display: flex;
+        height: auto;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .overlay_nst {
+        right: 0;
     }
 
     .urb_nst_title {
         padding: 70px 24px 200px 24px;
+        overflow: hidden;
     }
 
-    .nst_card-item {
-        width: calc(100% - 48px) !important;
+    .urb_nst_title p {
+        width: 100%;
     }
 
-    a>i {
-       /*  font-size: 2rem; */
+    .nst_card {
+        padding: 0 24px;
+        width: calc(100% - 48px);
     }
 
     .nst_card-content {
+        width: 100%;
         align-items: flex-start;
         gap: 24px;
-        padding: 0 24px;
+        padding: 0;
     }
 
     .exp-image {
@@ -119,12 +189,13 @@
         width: 75%;
     }
 
-    .urb_cont-box {
-        padding: 70px 24px;
-    }
 
     .urb_cont-detalle {
         align-items: center;
+    }
+
+    .urb_cont-box {
+        gap: 24px;
     }
 
     .urb_cont-box a {
@@ -136,7 +207,7 @@
     }
 
     .urb_copy {
-        padding: 16px 24px;
+        padding: 16px 24px !important;
     }
 
     .urb_cont-detalle {
@@ -145,13 +216,42 @@
         padding: 24px 0;
     }
 
-    .urb_cont-box {
-        gap: 24px;
-    }
-
     .overlay-contact {
         width: 100%;
-        opacity: .4;
+        opacity: .1;
+    }
+
+    .overlay_slider {
+        top: 0;
+        height: 100%;
+    }
+
+    .modal-content {
+        padding: initial;
+        width: 100%;
+        height: calc(100% - 100px);
+        margin: 0;
+        overflow: auto;
+        border-radius: 0;
+        bottom: 0;
+        position: absolute;
+        border-top-left-radius: 26px;
+        border-top-right-radius: 26px;
+        gap: 0;
+    }
+
+    .modal-header {
+        padding: 24px;
+        position: fixed;
+        background: white;
+        width: calc(100% - 48px);
+        border-top-left-radius: 26px;
+        border-top-right-radius: 26px;
+        z-index: 2;
+    }
+
+    .modal-body {
+        padding: 72px 24px 24px 24px;
     }
 
     .form-row {
@@ -189,20 +289,20 @@
         width: 100%;
     }
 
-    .nst_card-item {
-        width: calc(100% - 48px);
+    .o4B-img {
+        background-size: cover;
+        background-position: center;
     }
 
-    .nst_card-content {
-        display: flex;
-        flex-direction: column;
+    .kantan-img {
+        background-size: cover;
+        background-position: top;
     }
 
-    .exp_card {
-        display: flex;
-        height: auto;
-        flex-direction: column;
+    .prod-content h4 {
+        text-align: center;
     }
+
 
     .exp-navTab-proj {
         flex-direction: column;
@@ -216,21 +316,26 @@
         width: 100%;
         flex-direction: column;
     }
+
     .nav_active {
         border-bottom: none;
         background: #ffffff26;
     }
-    .urb_nav-listItem{
-        padding: 0!important;
+
+    .urb_nav-listItem {
+        padding: 0 !important;
     }
-    .urb_nav-list a{
-        width: auto;
+
+    .urb_nav-list a {
+        width: 100%;
         display: flex;
-        padding: 12px 24px!important;
+        padding: 12px 24px !important;
     }
-    .urb_nav-listItem-contacto{
+
+    .urb_nav-listItem-contacto {
         line-height: 0;
     }
+
     /*  */
     @keyframes fadeIn {
         from {
@@ -327,7 +432,7 @@
     .listItem {
         color: white;
         text-decoration: none;
-       /*  font-size: 18px; */
+        /*  font-size: 18px; */
     }
 }
 
@@ -367,7 +472,7 @@
         background: none;
         flex-direction: row;
     }
- 
+
 }
 
 /* X-Large devices (large desktops, 1200px and up) */
@@ -375,12 +480,41 @@
 
 /* XX-Large devices (larger desktops, 1400px and up) */
 @media (min-width: 1400px) {
+    .urb_serv-content {
+        width: 70vw;
+    }
+
+    .exp_card {
+        width: 70vw;
+    }
+
+    .urb_box-prod {
+        width: 70vw;
+    }
+
+    .urb_qs-img {
+        width: 70vw;
+    }
+
+    .urb_ali-images {
+        width: 70vw;
+    } 
+    
+    .urb_qs-logo {
+        top: 50%;
+        left: 72%;
+        transform: translate(-15%, -50%);
+    }
+
+    .serv_card-back {
+        height: auto;
+        padding-bottom: 80px !important;
+    }
 
     /* Nosotros */
-   /*  .urb_qs-img {
-        width: 511px;
-        height: 292.053px;
-    } */
+    .urb_home_content {
+        gap: 24px;
+    }
 
     .nst_card-item {
         width: 320px;
